PPC64: gcc 4.8 warning in output_c.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b04
    • generic
    • generic

        src/share/vm/adlc/output_c.cpp: In member function ‘void ArchDesc::define_postalloc_expand(FILE*, InstructForm&)’:
        src/share/vm/adlc/output_c.cpp:2537:57: error: zero-length gnu_printf format string [-Werror=format-zero-length]
           char idxbuf[buflen]; char *ib = idxbuf; sprintf(ib, "");
                                                                 ^
        src/share/vm/adlc/output_c.cpp:2538:57: error: zero-length gnu_printf format string [-Werror=format-zero-length]
           char nbuf [buflen]; char *nb = nbuf; sprintf(nb, "");
                                                                 ^
        src/share/vm/adlc/output_c.cpp:2539:57: error: zero-length gnu_printf format string [-Werror=format-zero-length]
           char opbuf [buflen]; char *ob = opbuf; sprintf(ob, "");

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: