8033168: PPC64: gcc 4.8 warning in output_c.cpp

Fix warnings

Reviewed-by: kvn